--- a/LangChain_hello_world.ipynb
+++ b/LangChain_hello_world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWL6vuh3nePRwFOdzwfMBY",
+      "authorship_tag": "ABX9TyPyrksoV77rcO1nMIHWQVuh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,6 +193,41 @@
           "name": "stdout",
           "text": [
             "Muhammad Ali Jinnah is considered the founder of Pakistan.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response2= model.invoke(\"what is the capital of spain?\")"
+      ],
+      "metadata": {
+        "id": "N74oIBnTfPFC"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(response2.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0GooX24Jffnw",
+        "outputId": "c9e186f7-f56b-4324-8fc7-88d24e853610"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Madrid\n",
             "\n"
           ]
         }
